layout redesign, horizontal scrollbar fix

--- a/css/style.css
+++ b/css/style.css
@@ -476,7 +476,7 @@ body {
     /* media query layout */
     #about {
         width: 100%;
-        height: 35%;
+        max-height: 35%;
     }
     #projects {
         width: 100%;
@@ -493,7 +493,7 @@ body {
     #about p {
         padding: 0;
         margin-right: -15px;
-        font-size: calc(0.7rem + 1vw);
+        font-size: calc(.5rem + 2.4vw);
         position: relative;
         z-index: 1;
     }
